[JEP-445] Grammar, parser and AST for unnamed classes